# whisper.cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  ggml-cuda.cu  ggml-cuda.h  ggml-metal.h  ggml-metal.m  ggml-metal.metal  ggml-opencl.cpp  ggml-opencl.h  ggml.c  ggml.h  whisper.cpp  whisper.h
.github/workflows/: bindings-go.yml  (+3 more)
bindings/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/: BuildTypes.cmake  DefaultTargetOptions.cmake
coreml/: whisper-decoder-impl.h  whisper-decoder-impl.m  whisper-encoder-impl.h  whisper-encoder-impl.m  whisper-encoder.h  whisper-encoder.mm
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  common-sdl.cpp  common-sdl.h  common.cpp  common.h  generate-karaoke.sh  livestream.sh  twitch.sh  yt-wsp.sh
examples/command/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  command.cpp  commands.txt
extra/: bench-all.sh  bench-wts.sh  convert-all.sh  deploy-wasm.sh  quantize-all.sh  sha-all.sh  sync-ggml.sh
models/: README.md  convert-h5-to-ggml.py  convert-pt-to-ggml.py  convert-whisper-to-coreml.py  convert-whisper-to-openvino.py  download-coreml-model.sh  download-ggml-model.sh  generate-coreml-interface.sh  generate-coreml-model.sh  ggml_to_pt.py  openvino-conversion-requirements.txt
openvino/: whisper-openvino-encoder.cpp  whisper-openvino-encoder.h
samples/: README.md
tests/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run-tests.sh  test-whisper.js
(+149 files in other folders)
